Fixed the stupid alignment

--- a/style.css
+++ b/style.css
@@ -5,7 +5,13 @@ body {
    background: #2C493A;
    font-family: 'Clash Display', sans-serif;
   background-image: url(assets/bgv2.jpg);
-  background-size: contain;
+  background-size: contain; 
+     height: cover;
+   display: grid;
+    
+/* Change  values  👇 to experiment*/
+   align-content: right;
+   justify-content: right;
 
 }
 
@@ -17,15 +23,13 @@ figure {
   font-family: sans-serif;
   font-weight: 1;
   font-size: var(--font-size-4);
-  display:flex;
-  flex-direction: column;
-align-items: flex-end;
+  display: grid;
+/*   grid-template-columns: 25% 25% 25% 25%; */
 
 }
 
 h1 {
-  display: flex;
-  justify-content: flex-end;
+
   font-family: 'Clash Display', sans-serif;
 }
 
@@ -45,6 +49,7 @@ header {
 }
 
 audio {
-  width: 35%;
+  width: 100%;
+  /* width: 35%; */
  
 }
